--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-web-share": "^2.0.2",
     "typescript": "^4.8.3",
     "webpack": "5.9.0"
   },
