--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@mui/material": "^5.10.4",
     "@react-spring/parallax": "^9.5.4",
     "babel-core": "^7.0.0-bridge.0",
+    "date-fns": "^2.29.3",
     "express": "^4.18.1",
     "graphql": "^16.6.0",
     "next": "12.3.0",
     "next-pwa": "^5.6.0",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-web-share": "^2.0.2",
