--- a/package.json
+++ b/package.json
@@ -22,15 +22,13 @@
     "graphql": "^16.6.0",
     "next": "12.3.0",
     "next-pwa": "^5.6.0",
-    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-web-share": "^2.0.2",
-    "typescript": "^4.8.3",
+    "styled-scrollbar": "^2.0.34",
     "webpack": "5.9.0"
   },
   "devDependencies": {
-    "@svgr/webpack": "^6.3.1",
     "eslint": "8.23.0",
     "eslint-config-next": "12.3.0",
     "express": "^4.18.1",
