--- a/package.json
+++ b/package.json
@@ -10,28 +10,22 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
-    "@babel/core": "^7.19.1",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.4",
     "@react-spring/parallax": "^9.5.4",
-    "babel-core": "^7.0.0-bridge.0",
     "date-fns": "^2.29.3",
-    "express": "^4.18.1",
     "graphql": "^16.6.0",
     "next": "12.3.0",
-    "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-web-share": "^2.0.2",
-    "styled-scrollbar": "^2.0.34",
-    "webpack": "5.9.0"
+    "react-web-share": "^2.0.2"
   },
   "devDependencies": {
+    "@types/node": "18.14.6",
     "eslint": "8.23.0",
     "eslint-config-next": "12.3.0",
-    "express": "^4.18.1",
     "sass": "^1.54.9"
   }
 }
