--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-web-share": "^2.0.2"
+    "react-web-share": "^2.0.2",
+    "styled-scrollbar": "^3.0.0"
   },
   "devDependencies": {
     "@types/node": "18.14.6",
