--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.4",
     "@react-spring/parallax": "^9.5.4",
+    "bcryptjs": "^2.4.3",
+    "cookie": "^0.5.0",
     "date-fns": "^2.29.3",
     "graphql": "^16.6.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.2",
     "next": "12.3.0",
+    "next-connect": "^0.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-web-share": "^2.0.2",
