--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "babel-loader": "^8.3.0",
     "eslint": "8.23.0",
     "eslint-config-next": "12.3.0",
-    "sass": "^1.54.9"
+    "sass": "^1.54.9",
+    "typescript": "5.0.2"
   }
 }
