--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-web-share": "^2.0.2",
-    "styled-scrollbar": "^3.0.0"
+    "styled-scrollbar": "^3.0.0",
+    "stylis": "^4.1.3",
+    "stylis-plugin-rtl": "^2.1.1"
   },
   "devDependencies": {
     "@types/node": "18.14.6",
