--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "tev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "export": "next build && next export"
@@ -21,19 +22,20 @@
     "graphql": "^16.6.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.2",
-    "next": "12.3.0",
+    "next": "^13.2.4",
     "next-connect": "^0.13.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.7",
     "react-web-share": "^2.0.2",
-    "styled-scrollbar": "^3.0.0",
+    "sharp": "^0.32.0",
     "stylis": "^4.1.3",
     "stylis-plugin-rtl": "^2.1.1"
   },
   "devDependencies": {
     "@types/node": "18.14.6",
     "eslint": "8.23.0",
-    "eslint-config-next": "12.3.0",
+    "eslint-config-next": "^13.2.4",
     "sass": "^1.54.9"
   }
 }
