next-auth to clerk

--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "@clerk/nextjs": "^4.16.4",
+    "@clerk/themes": "^1.6.3",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.4",
-    "@next-auth/mongodb-adapter": "^1.1.1",
     "@react-spring/parallax": "^9.5.4",
     "bcryptjs": "^2.4.3",
     "cookie": "^0.5.0",
@@ -23,10 +24,8 @@
     "formik": "^2.2.9",
     "graphql": "^16.6.0",
     "jsonwebtoken": "^9.0.0",
-    "mongodb": "^4.15.0",
     "mongoose": "^7.0.4",
     "next": "^13.2.4",
-    "next-auth": "^4.22.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7",
