--- a/package.json
+++ b/package.json
@@ -18,15 +18,9 @@
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.4",
     "@react-spring/parallax": "^9.5.4",
-    "bcryptjs": "^2.4.3",
-    "cookie": "^0.5.0",
     "date-fns": "^2.29.3",
-    "formik": "^2.2.9",
     "graphql": "^16.6.0",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.4",
     "next": "^13.2.4",
-    "next-pwa": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7",
@@ -34,8 +28,7 @@
     "react-web-share": "^2.0.2",
     "sharp": "^0.32.0",
     "stylis": "^4.1.3",
-    "stylis-plugin-rtl": "^2.1.1",
-    "yup": "^1.1.1"
+    "stylis-plugin-rtl": "^2.1.1"
   },
   "devDependencies": {
     "@types/node": "18.14.6",
