Update package.json private

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "reactizm",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "dev": "next dev",
     "tev": "next dev --turbo",
