--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/nextjs": "^4.21.1",
     "@clerk/themes": "^1.7.5",
+    "@contentful/rich-text-react-renderer": "^15.17.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
@@ -21,6 +22,7 @@
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "autoprefixer": "10.4.14",
+    "contentful": "^10.2.4",
     "date-fns": "^2.30.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
@@ -30,9 +32,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
-    "react-markdown": "^8.0.7",
+    "react-player": "^2.12.0",
     "react-web-share": "^2.0.2",
     "sass": "^1.63.4",
+    "sharp": "^0.32.1",
     "stylis": "^4.2.0",
     "stylis-plugin-rtl": "^2.1.1",
     "tailwindcss": "3.3.2",
